--- a/src/app/screens/block-list/block-list.component.css
+++ b/src/app/screens/block-list/block-list.component.css
@@ -223,8 +223,8 @@
 } */
 
 .switch_box {
-    height: 26px;
-    width: 60px;
+    height: 16px;
+    width: 30px;
     background: #ccc;
     border-radius: 40px;
     cursor: pointer;
@@ -235,8 +235,8 @@
 .switch_box::before {
     content: "";
     border-radius: 17px;
-    height: 22px;
-    width: 22px;
+    height: 12px;
+    width: 12px;
     position: absolute;
     top: 50%;
     left: 2px;
@@ -250,7 +250,7 @@
 }
 
 .switch_box.active::before {
-    left: 36px;
+    left: 16px;
     background-color: white;
 }
 
@@ -435,7 +435,6 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    min-width: 1100px;
 }
 
 .t-item {
@@ -457,9 +456,11 @@
     flex: 1;
 }
 
-.ti-item:nth-child(3),
+.ti-item:nth-child(3){
+    flex: .2;
+}
 .ti-item:nth-child(4) {
-    flex: .5;
+    flex: 1;
 }
 
 .ti-item {
