Fixed devices page.

--- a/src/app/screens/devices/devices.component.css
+++ b/src/app/screens/devices/devices.component.css
@@ -396,6 +396,10 @@
     text-transform: capitalize;
 }
 
+.h-item strong {
+    width: 90px;
+}
+
 .h-item span {
     font-weight: 400;
 }
@@ -407,7 +411,7 @@
 }
 
 .reports {
-    height: 680px;
+    height: 458px;
 }
 
 .analytics {
