--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -102,12 +102,14 @@
     height: 45px ;
     width: 150px;
     padding-left: 15px;
+    padding-right: 15px;
     display: flex;
     align-items: center;
     justify-items: left;
     gap: 1rem;
     cursor: pointer;
     border-radius: 1rem;
+    white-space: nowrap;
 }
 
 a {
@@ -173,6 +175,8 @@ a {
     height: 45px ;
     width: 125px;
     padding-left: 15px;
+    padding-right: 15px;
+    white-space: nowrap;
     display: flex;
     align-items: center;
     justify-items: left;
