--- a/src/app/screens/messages/messages.component.css
+++ b/src/app/screens/messages/messages.component.css
@@ -257,6 +257,7 @@
 .msg-boxes-container {
     display: flex;
     justify-content: space-between;
+    gap: 10px;
     flex-wrap: wrap;
     padding: 0 10px;
 }
@@ -265,7 +266,8 @@
     box-shadow: 0px 0px 10px 0px rgba(46, 188, 150, 0.20);
     border-radius: 20px;
     padding: 0 10px;
-    width: 250px;
+    min-width: 250px;
+    width: 30%;
 }
 
 .msg-box textarea {
