Added logout icon.

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -223,8 +223,8 @@
             class="menu_item"
           >
             <div>
-              <img src="../../../assets/homeicon.png" />
-              <img src="../../../assets/homeiconw.png" />
+              <img src="../../../assets/logouticon.png" />
+              <img src="../../../assets/logouticonw.png" />
             </div>
 
             <span>Logout</span>
