--- a/src/app/screens/messages/messages.component.html
+++ b/src/app/screens/messages/messages.component.html
@@ -126,7 +126,7 @@
         <div
           style="
             width: 100%;
-            height: 220px;
+            height: 350px;
             display: flex;
             flex-direction: column;
           "
@@ -184,7 +184,7 @@
     <div class="instance_grid">
       <div
         class="instance_card"
-        style="height: 220px"
+        style="height: 350px"
         *ngFor="
           let instance of currentMessageList.slice(
             currentMessageList.length - 1,
@@ -205,9 +205,9 @@
               *ngIf="!instance.isEditable"
               class="edit"
               (click)="toggleEdit(instance, 3)"
+              style="box-shadow: none"
             >
               <img src="../../assets/icons/edit.svg" alt="e" />
-              <span>{{ instance.isEditable ? "Save" : "Edit" }}</span>
             </button>
           </div>
         </div>
@@ -216,6 +216,7 @@
           [(ngModel)]="currentMessageList[3]"
           (ngModelChange)="onTextAreaChange(instance, $event)"
           placeholder="Type here..."
+          style="box-shadow: 0px 18px 40px 0px rgba(112, 144,  176,  0.12)"
         ></textarea>
         <button class="update" *ngIf="instance.isEditable">Update</button>
       </div>
