Sidebar and msg page fix.

--- a/src/app/screens/messages/messages.component.html
+++ b/src/app/screens/messages/messages.component.html
@@ -132,7 +132,9 @@
           "
         >
           <div class="ic_top d-flex justify-content-between align-items-center">
-            <h4 class="fw-semibold">{{ currentList }} Message {{ i + 1 }}</h4>
+            <h4 class="fw-semibold fs-4">
+              {{ currentList }} Message {{ i + 1 }}
+            </h4>
             <div class="ict_right">
               <span
                 class="limit_text"
@@ -193,7 +195,7 @@
         "
       >
         <div class="ic_top">
-          <h4 class="fw-semibold fs-4">{{ instance.name }}</h4>
+          <h4 class="fw-semibold fs-4">{{ instance.name }}Messages</h4>
           <div class="ict_right">
             <span
               class="limit_text"
