--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -106,7 +106,7 @@
     display: flex;
     align-items: center;
     justify-items: left;
-    gap: 1rem;
+    gap: 8px;
     cursor: pointer;
     border-radius: 1rem;
     white-space: nowrap;
