--- a/src/app/screens/devices/devices.component.html
+++ b/src/app/screens/devices/devices.component.html
@@ -174,81 +174,40 @@
 
   <div class="analytics">
     <div class="card">
-      <div class="icon">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="27"
-          height="27"
-          viewBox="0 0 27 27"
-          fill="none"
-        >
-          <path
-            fill-rule="evenodd"
-            clip-rule="evenodd"
-            d="M3.8306 0.933594C2.23063 0.933594 0.933594 2.23065 0.933594 3.8306V24.1097C0.933594 25.7096 2.23063 27.0067 3.8306 27.0067H24.1097C25.7096 27.0067 27.0067 25.7096 27.0067 24.1097V3.8306C27.0067 2.23065 25.7096 0.933594 24.1097 0.933594H3.8306ZM8.17612 15.4186C8.17612 14.6186 7.5276 13.9701 6.72761 13.9701C5.92763 13.9701 5.27911 14.6186 5.27911 15.4186V21.2127C5.27911 22.0127 5.92763 22.6612 6.72761 22.6612C7.5276 22.6612 8.17612 22.0127 8.17612 21.2127V15.4186ZM13.9701 9.62462C14.7701 9.62462 15.4186 10.2731 15.4186 11.0731V21.2127C15.4186 22.0127 14.7701 22.6612 13.9701 22.6612C13.1702 22.6612 12.5216 22.0127 12.5216 21.2127V11.0731C12.5216 10.2731 13.1702 9.62462 13.9701 9.62462ZM22.6612 6.72761C22.6612 5.92759 22.0127 5.27911 21.2127 5.27911C20.4127 5.27911 19.7642 5.92759 19.7642 6.72761V21.2127C19.7642 22.0127 20.4127 22.6612 21.2127 22.6612C22.0127 22.6612 22.6612 22.0127 22.6612 21.2127V6.72761Z"
-            fill="white"
-          />
-        </svg>
+      <div class="icon"><img src="../../../assets/an-sms.png" /></div>
+      <div>
+        <p>Total SMS</p>
+        <p>5,423</p>
+
+        <p>
+          <span><img src="../../../assets/an-arrow.png" /> 16%</span> this month
+        </p>
       </div>
-      <h1>300</h1>
-      <p>Total Sent Messages</p>
-      <span>+8% from yesterday</span>
     </div>
     <div class="card">
-      <div class="icon">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="38"
-          height="37"
-          viewBox="0 0 38 37"
-          fill="none"
-        >
-          <path
-            d="M20.576 9.20825H10.754C10.355 9.20825 9.97128 9.2236 9.60296 9.26964C5.47466 9.62262 3.40283 12.0628 3.40283 16.5594V22.6981C3.40283 28.8369 5.85833 30.0493 10.754 30.0493H11.3678C11.7055 30.0493 12.1505 30.2795 12.35 30.5404L14.1917 32.9959C15.0051 34.0855 16.3249 34.0855 17.1383 32.9959L18.9799 30.5404C19.2101 30.2334 19.5784 30.0493 19.9621 30.0493H20.576C25.0726 30.0493 27.5127 27.9928 27.8657 23.8491C27.9118 23.4808 27.9271 23.0972 27.9271 22.6981V16.5594C27.9271 11.6637 25.4716 9.20825 20.576 9.20825ZM10.3089 21.4857C9.44949 21.4857 8.77423 20.7951 8.77423 19.951C8.77423 19.107 9.46484 18.4164 10.3089 18.4164C11.153 18.4164 11.8436 19.107 11.8436 19.951C11.8436 20.7951 11.153 21.4857 10.3089 21.4857ZM15.665 21.4857C14.8055 21.4857 14.1303 20.7951 14.1303 19.951C14.1303 19.107 14.8209 18.4164 15.665 18.4164C16.509 18.4164 17.1997 19.107 17.1997 19.951C17.1997 20.7951 16.5244 21.4857 15.665 21.4857ZM21.0364 21.4857C20.1769 21.4857 19.5017 20.7951 19.5017 19.951C19.5017 19.107 20.1923 18.4164 21.0364 18.4164C21.8804 18.4164 22.571 19.107 22.571 19.951C22.571 20.7951 21.8804 21.4857 21.0364 21.4857Z"
-            fill="white"
-          />
-          <path
-            d="M34.0662 10.4207V16.5595C34.0662 19.6288 33.1147 21.716 31.2117 22.867C30.7513 23.1433 30.2142 22.7749 30.2142 22.2378L30.2295 16.5595C30.2295 10.4207 26.7151 6.90629 20.5764 6.90629L11.2302 6.92164C10.6931 6.92164 10.3247 6.3845 10.601 5.92409C11.752 4.02108 13.8392 3.06958 16.8931 3.06958H26.7151C31.6107 3.06958 34.0662 5.52508 34.0662 10.4207Z"
-            fill="white"
-          />
-        </svg>
+      <div class="icon"><img src="../../../assets/an-whatsapp.png" /></div>
+      <div>
+        <p>Total WhatsApp</p>
+        <p>5,423</p>
+
+        <p>
+          <span><img src="../../../assets/an-arrow.png" /> 16%</span> this month
+        </p>
       </div>
-      <h1>300</h1>
-      <p>Total Sent Messages</p>
-      <span>+8% from yesterday</span>
     </div>
     <div class="card">
-      <div class="icon">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="38"
-          height="37"
-          viewBox="0 0 38 37"
-          fill="none"
-        >
-          <path
-            fill-rule="evenodd"
-            clip-rule="evenodd"
-            d="M26.4233 23.4551C26.0969 24.3789 24.7997 25.1431 23.7651 25.3666C23.0569 25.517 22.1334 25.6359 19.0216 24.3464C15.5265 22.8984 10.6733 17.7405 10.6733 14.3081C10.6733 12.5607 11.6808 10.526 13.4425 10.526C14.2902 10.526 14.4771 10.5426 14.756 11.2117C15.0824 12 15.8786 13.9424 15.9734 14.1415C16.3648 14.9583 15.5753 15.4364 15.0025 16.1475C14.8197 16.3615 14.6125 16.593 14.8441 16.9912C15.0743 17.3813 15.8705 18.679 17.0405 19.7207C18.5517 21.0671 19.7772 21.4969 20.2159 21.6798C20.5423 21.8152 20.9323 21.7837 21.1706 21.529C21.4726 21.2026 21.8476 20.661 22.2295 20.1273C22.499 19.7453 22.8416 19.6976 23.2004 19.8331C23.4428 19.917 26.5235 21.3477 26.6535 21.5766C26.7496 21.7433 26.7496 22.5313 26.4233 23.4551ZM18.5436 4.33325H18.5368C11.0714 4.33325 4.99951 10.407 4.99951 17.8746C4.99951 20.8356 5.95419 23.5827 7.57779 25.811L5.89054 30.8427L11.0945 29.1798C13.2354 30.5966 15.7906 31.4159 18.5436 31.4159C26.0089 31.4159 32.0822 25.3422 32.0822 17.8746C32.0822 10.407 26.0089 4.33325 18.5436 4.33325Z"
-            fill="#24CC63"
-          />
-        </svg>
+      <div class="icon"><img src="../../../assets/an-send.png" /></div>
+      <div>
+        <p>Total Sent</p>
+        <p>10,423</p>
+
+        <p>
+          <span><img src="../../../assets/an-arrow.png" /> 16%</span> this month
+        </p>
       </div>
-      <h1>300</h1>
-      <p>Total Sent Messages</p>
-      <span>+8% from yesterday</span>
     </div>
-    <div class="card-full">
-      <div class="cf-item">
-        <h2>Total Bookings</h2>
-        <h3>3265+</h3>
-        <span>Arrived</span>
-      </div>
-      <div class="cf-item">
-        <h2>Total Confirmed</h2>
-        <h3>3265+</h3>
-        <span>No. of Bills: +15%</span>
-      </div>
+    <div class="card">
+      <img src="../../../assets/an-chart.png" />
     </div>
   </div>
 
