Fix filter button and h4 in devices page.

--- a/src/app/screens/devices/devices.component.css
+++ b/src/app/screens/devices/devices.component.css
@@ -807,7 +807,12 @@ strong {
 
 .a_top {
     display: flex;
+    justify-content: space-between;
     gap: 1rem;
+}
+
+.a_top h4 {
+    font-weight: 600;
 }
 
 .a_top button {
