--- a/src/app/screens/devices/devices.component.html
+++ b/src/app/screens/devices/devices.component.html
@@ -240,9 +240,8 @@
 
   <div class="activity">
     <div class="a_top">
-      <button>
-        <span>All Messages</span>
-      </button>
+      <h4>All Messages</h4>
+
       <button class="filter" (click)="showFilters = true">
         <svg
           xmlns="http://www.w3.org/2000/svg"
