--- a/src/app/screens/app-settings/app-settings.component.css
+++ b/src/app/screens/app-settings/app-settings.component.css
@@ -73,11 +73,12 @@
   }
 
   .toggles {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
-      gap: 1rem;
-      padding: 3rem;
-  }
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Reduced min width */
+    gap: 1rem;
+    padding: 3rem;
+}
+
 
   .toggle {
       border-radius: 5px;
@@ -89,38 +90,37 @@
       gap: 1rem;
       justify-content: space-between;
   }
-
   .switch_box {
-      height: 26px;
-      width: 60px;
-      background: #ccc;
-      border-radius: 40px;
-      cursor: pointer;
-      position: relative;
-      transition: 250ms;
-  }
+    height: 16px;
+    width: 30px;
+    background: #ccc;
+    border-radius: 40px;
+    cursor: pointer;
+    position: relative;
+    transition: 250ms;
+}
 
-  .switch_box::before {
-      content: "";
-      border-radius: 17px;
-      height: 22px;
-      width: 22px;
-      position: absolute;
-      top: 50%;
-      left: 2px;
-      transform: translateY(-50%);
-      background-color: #fff;
-      transition: 250ms;
-  }
+.switch_box::before {
+    content: "";
+    border-radius: 17px;
+    height: 12px;
+    width: 12px;
+    position: absolute;
+    top: 50%;
+    left: 2px;
+    transform: translateY(-50%);
+    background-color: #fff;
+    transition: 250ms;
+}
 
-  .switch_box.active {
-      background: linear-gradient(to left, #34836E 0%, #0DC997 100%);
-  }
+.switch_box.active {
+    background: linear-gradient(to left, #34836E 0%, #0DC997 100%);
+}
 
-  .switch_box.active::before {
-      left: 36px;
-      background-color: white;
-  }
+.switch_box.active::before {
+    left: 16px;
+    background-color: white;
+}
 
   .credentials_tabs {
       display: flex;
