--- a/src/app/screens/app-settings/app-settings.component.html
+++ b/src/app/screens/app-settings/app-settings.component.html
@@ -1,119 +1,151 @@
 <div class="container-own">
-    <div class="left">
-        <div class="item" *ngFor="let item of tabs" (click)="setCurrentTab(item)"
-            [class.active]="item.name === currentTab?.name">
-            <img [src]="item.icon" alt="">
-            <span>{{item.name}}</span>
+  <div class="left">
+    <div
+      class="item"
+      style="width: fit-content"
+      *ngFor="let item of tabs"
+      (click)="setCurrentTab(item)"
+      [class.active]="item.name === currentTab?.name"
+    >
+      <img [src]="item.icon" style="width: 20px; height: 20px" alt="" />
+      <span style="font-size: 10px">{{ item.name }}</span>
+    </div>
+  </div>
+  <div class="right">
+    <div class="top">
+      Settings / <strong>{{ currentTab?.name }}</strong>
+    </div>
+
+    <!-- smsm settings -->
+    <ng-container *ngIf="currentTab.name === 'SMS Settings'">
+      <div class="h">Outgoing SMS Settings</div>
+      <div class="toggles">
+        <div class="toggle" *ngFor="let toggle of togglesData">
+          <span>{{ toggle.label }}</span>
+          <div class="switch_box" [class.active]="toggle.enabled"></div>
         </div>
-    </div>
-    <div class="right">
-        <div class="top">Settings / <strong>{{currentTab?.name}}</strong></div>
+      </div>
+      <div class="h">Outgoing SMS Settings</div>
+      <div class="credentials_tabs">
+        <label>
+          <input type="radio" name="tab" id="tab" />
+          <span>SMS Gateway Credentials</span>
+        </label>
+        <label class="active">
+          <input type="radio" name="tab" id="tab" />
+          <span>Icabbi App Credentials</span>
+        </label>
+      </div>
+      <div class="credentials">
+        <div class="inp_con">
+          <label for="">SMS App API</label>
+          <input type="text" readonly disabled value="https://api.accabi.com" />
+        </div>
+        <div class="inp_con">
+          <label for="">App Key</label>
+          <input type="text" readonly disabled value="https://api.accabi.com" />
+        </div>
+      </div>
+    </ng-container>
 
-        <!-- smsm settings -->
-        <ng-container *ngIf="currentTab.name === 'SMS Settings'">
-            <div class=" h">
-                Outgoing SMS Settings
+    <!-- profile Settings -->
+    <ng-container *ngIf="currentTab.name === 'Profile'">
+      <div class="h">Profile Settings</div>
+      <div class="profile-settings">
+        <div class="ps-left">
+          <div class="field">
+            <label>Name</label>
+            <span>:</span>
+            <div class="input">
+              <input type="text" placeholder="Enter your name" />
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="23"
+                height="23"
+                viewBox="0 0 23 23"
+                fill="none"
+              >
+                <path
+                  d="M20.9338 1.98586C20.6171 1.6705 20.2411 1.42101 19.8274 1.25181C19.4137 1.08261 18.9706 0.997052 18.5236 1.00008C18.0767 1.0031 17.6348 1.09465 17.2234 1.26944C16.8121 1.44422 16.4394 1.69878 16.127 2.0184L2.64566 15.4998L1 21.9197L7.41992 20.2731L20.9013 6.79173C21.221 6.47946 21.4756 6.10692 21.6505 5.69563C21.8253 5.28434 21.9169 4.84248 21.9199 4.39558C21.9229 3.94869 21.8374 3.50562 21.6681 3.09201C21.4988 2.67839 21.2493 2.30243 20.9338 1.98586V1.98586Z"
+                  stroke="#615E83"
+                  stroke-width="1.3"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
             </div>
-            <div class="toggles">
-                <div class="toggle" *ngFor="let toggle of togglesData">
-                    <span>{{toggle.label}}</span>
-                    <div class="switch_box" [class.active]="toggle.enabled">
-                    </div>
-                </div>
+          </div>
+          <div class="field">
+            <label>Username</label>
+            <span>:</span>
+            <div class="input">
+              <input type="text" placeholder="Enter your username" />
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="23"
+                height="23"
+                viewBox="0 0 23 23"
+                fill="none"
+              >
+                <path
+                  d="M20.9338 1.98586C20.6171 1.6705 20.2411 1.42101 19.8274 1.25181C19.4137 1.08261 18.9706 0.997052 18.5236 1.00008C18.0767 1.0031 17.6348 1.09465 17.2234 1.26944C16.8121 1.44422 16.4394 1.69878 16.127 2.0184L2.64566 15.4998L1 21.9197L7.41992 20.2731L20.9013 6.79173C21.221 6.47946 21.4756 6.10692 21.6505 5.69563C21.8253 5.28434 21.9169 4.84248 21.9199 4.39558C21.9229 3.94869 21.8374 3.50562 21.6681 3.09201C21.4988 2.67839 21.2493 2.30243 20.9338 1.98586V1.98586Z"
+                  stroke="#615E83"
+                  stroke-width="1.3"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
             </div>
-            <div class="h">
-                Outgoing SMS Settings
+          </div>
+          <div class="field">
+            <label>Password</label>
+            <span>:</span>
+            <div class="input">
+              <input type="password" placeholder="Password" />
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="23"
+                height="23"
+                viewBox="0 0 23 23"
+                fill="none"
+              >
+                <path
+                  d="M20.9338 1.98586C20.6171 1.6705 20.2411 1.42101 19.8274 1.25181C19.4137 1.08261 18.9706 0.997052 18.5236 1.00008C18.0767 1.0031 17.6348 1.09465 17.2234 1.26944C16.8121 1.44422 16.4394 1.69878 16.127 2.0184L2.64566 15.4998L1 21.9197L7.41992 20.2731L20.9013 6.79173C21.221 6.47946 21.4756 6.10692 21.6505 5.69563C21.8253 5.28434 21.9169 4.84248 21.9199 4.39558C21.9229 3.94869 21.8374 3.50562 21.6681 3.09201C21.4988 2.67839 21.2493 2.30243 20.9338 1.98586V1.98586Z"
+                  stroke="#615E83"
+                  stroke-width="1.3"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
             </div>
-            <div class="credentials_tabs">
-                <label>
-                    <input type="radio" name="tab" id="tab">
-                    <span>SMS Gateway Credentials</span>
-                </label>
-                <label class="active">
-                    <input type="radio" name="tab" id="tab">
-                    <span>Icabbi App Credentials</span>
-                </label>
+          </div>
+          <div class="field">
+            <label>User ID</label>
+            <span>:</span>
+            <div class="input">
+              <input type="text" placeholder="Enter your user id" />
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="23"
+                height="23"
+                viewBox="0 0 23 23"
+                fill="none"
+              >
+                <path
+                  d="M20.9338 1.98586C20.6171 1.6705 20.2411 1.42101 19.8274 1.25181C19.4137 1.08261 18.9706 0.997052 18.5236 1.00008C18.0767 1.0031 17.6348 1.09465 17.2234 1.26944C16.8121 1.44422 16.4394 1.69878 16.127 2.0184L2.64566 15.4998L1 21.9197L7.41992 20.2731L20.9013 6.79173C21.221 6.47946 21.4756 6.10692 21.6505 5.69563C21.8253 5.28434 21.9169 4.84248 21.9199 4.39558C21.9229 3.94869 21.8374 3.50562 21.6681 3.09201C21.4988 2.67839 21.2493 2.30243 20.9338 1.98586V1.98586Z"
+                  stroke="#615E83"
+                  stroke-width="1.3"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
             </div>
-            <div class="credentials">
-                <div class="inp_con">
-                    <label for="">SMS App API</label>
-                    <input type="text" readonly disabled value="https://api.accabi.com">
-                </div>
-                <div class="inp_con">
-                    <label for="">App Key</label>
-                    <input type="text" readonly disabled value="https://api.accabi.com">
-                </div>
-            </div>
-        </ng-container>
-
-        <!-- profile Settings -->
-        <ng-container *ngIf="currentTab.name === 'Profile'">
-            <div class=" h">
-                Profile Settings
-            </div>
-            <div class="profile-settings">
-                <div class="ps-left">
-                    <div class="field">
-                        <label>Name</label>
-                        <span>:</span>
-                        <div class="input">
-                            <input type="text" placeholder="Enter your name">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23"
-                                fill="none">
-                                <path
-                                    d="M20.9338 1.98586C20.6171 1.6705 20.2411 1.42101 19.8274 1.25181C19.4137 1.08261 18.9706 0.997052 18.5236 1.00008C18.0767 1.0031 17.6348 1.09465 17.2234 1.26944C16.8121 1.44422 16.4394 1.69878 16.127 2.0184L2.64566 15.4998L1 21.9197L7.41992 20.2731L20.9013 6.79173C21.221 6.47946 21.4756 6.10692 21.6505 5.69563C21.8253 5.28434 21.9169 4.84248 21.9199 4.39558C21.9229 3.94869 21.8374 3.50562 21.6681 3.09201C21.4988 2.67839 21.2493 2.30243 20.9338 1.98586V1.98586Z"
-                                    stroke="#615E83" stroke-width="1.3" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                            </svg>
-                        </div>
-                    </div>
-                    <div class="field">
-                        <label>Username</label>
-                        <span>:</span>
-                        <div class="input">
-                            <input type="text" placeholder="Enter your username">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23"
-                                fill="none">
-                                <path
-                                    d="M20.9338 1.98586C20.6171 1.6705 20.2411 1.42101 19.8274 1.25181C19.4137 1.08261 18.9706 0.997052 18.5236 1.00008C18.0767 1.0031 17.6348 1.09465 17.2234 1.26944C16.8121 1.44422 16.4394 1.69878 16.127 2.0184L2.64566 15.4998L1 21.9197L7.41992 20.2731L20.9013 6.79173C21.221 6.47946 21.4756 6.10692 21.6505 5.69563C21.8253 5.28434 21.9169 4.84248 21.9199 4.39558C21.9229 3.94869 21.8374 3.50562 21.6681 3.09201C21.4988 2.67839 21.2493 2.30243 20.9338 1.98586V1.98586Z"
-                                    stroke="#615E83" stroke-width="1.3" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                            </svg>
-                        </div>
-                    </div>
-                    <div class="field">
-                        <label>Password</label>
-                        <span>:</span>
-                        <div class="input">
-                            <input type="password" placeholder="Password">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23"
-                                fill="none">
-                                <path
-                                    d="M20.9338 1.98586C20.6171 1.6705 20.2411 1.42101 19.8274 1.25181C19.4137 1.08261 18.9706 0.997052 18.5236 1.00008C18.0767 1.0031 17.6348 1.09465 17.2234 1.26944C16.8121 1.44422 16.4394 1.69878 16.127 2.0184L2.64566 15.4998L1 21.9197L7.41992 20.2731L20.9013 6.79173C21.221 6.47946 21.4756 6.10692 21.6505 5.69563C21.8253 5.28434 21.9169 4.84248 21.9199 4.39558C21.9229 3.94869 21.8374 3.50562 21.6681 3.09201C21.4988 2.67839 21.2493 2.30243 20.9338 1.98586V1.98586Z"
-                                    stroke="#615E83" stroke-width="1.3" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                            </svg>
-                        </div>
-                    </div>
-                    <div class="field">
-                        <label>User ID</label>
-                        <span>:</span>
-                        <div class="input">
-                            <input type="text" placeholder="Enter your user id">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23"
-                                fill="none">
-                                <path
-                                    d="M20.9338 1.98586C20.6171 1.6705 20.2411 1.42101 19.8274 1.25181C19.4137 1.08261 18.9706 0.997052 18.5236 1.00008C18.0767 1.0031 17.6348 1.09465 17.2234 1.26944C16.8121 1.44422 16.4394 1.69878 16.127 2.0184L2.64566 15.4998L1 21.9197L7.41992 20.2731L20.9013 6.79173C21.221 6.47946 21.4756 6.10692 21.6505 5.69563C21.8253 5.28434 21.9169 4.84248 21.9199 4.39558C21.9229 3.94869 21.8374 3.50562 21.6681 3.09201C21.4988 2.67839 21.2493 2.30243 20.9338 1.98586V1.98586Z"
-                                    stroke="#615E83" stroke-width="1.3" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                            </svg>
-                        </div>
-                    </div>
-                </div>
-                <div class="ps-right">
-                    <img src="../../../assets/profile-settings.png" alt="">
-                </div>
-            </div>
-        </ng-container>
-    </div>
+          </div>
+        </div>
+        <div class="ps-right">
+          <img src="../../../assets/profile-settings.png" alt="" />
+        </div>
+      </div>
+    </ng-container>
+  </div>
 </div>
